# PTArcade

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  Singularity  docker-entrypoint.sh  environment.yml  gen_ref_pages.py  index.html  mkdocs.yml  noxfile.py  objects.inv  ptarcade.yml  pyproject.toml  requirements.txt  sampler.py  test
.cache/plugin/git-committers/: page-authors.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-deploy-container.yml  publish.yml
assets/downloads/: ptarcade.yml
assets/stylesheets/: home.fefd3cb3.min.css
contributing/: index.html
docs/: getting-started.md  index.md  inputs.md  installation.md  outputs.md  overview.md  run.md  usage.md
docs/assets/downloads/: ptarcade.yml
docs/getting_started/: hpc_install.md  index.md  local_install.md  run.md  trouble.md
docs/inputs/: config.md  index.md  model.md
docs/stylesheets/: extra.css
docs/utils/: chain_utils.md  index.md  model_utils.md  plot_utils.md
getting_started/: index.html
getting_started/hpc_install/: index.html
getting_started/local_install/: index.html
getting_started/run/: index.html
getting_started/trouble/: index.html
inputs/: index.html
inputs/config/: full_run.py  index.html
inputs/model/: index.html
inputs/models/: BOS.py  PBH_delta.py  PBH_log-2.py  PBH_log.py  bos.py  cusps.py  domain_walls.py  domain_walls_ds.py  domain_walls_sm.py  dw_ds.py  dw_sm.py  fundamental.py  igw.py  kinks.py  pbh_dynamic.py  pbh_static.py  pt_bubble.py  pt_sound.py  sigw_box.py  sigw_delta.py  sigw_gauss.py  sigw_log.py  string_meta_l+s.py  string_meta_l.py  string_stable.py  superstrings.py  uldm_c_cor.py  uldm_c_unc.py  uldm_e.py  uldm_earth.py  uldm_p_cor.py  uldm_p_unc.py  uldm_pulsar.py  uldm_vecBL_cor.py  uldm_vecBL_unc.py  uldm_vecB_cor.py  uldm_vecB_unc.py
inputs/models/models_data/: bos.h5  cusps.h5  data.txt  kinks.h5  meta_l+s.h5  meta_l.h5  models_utils.py  pbh_log.txt  sigw_box.h5  sigw_box.txt  sigw_log.h5  stable.h5  stable_m.h5
inputs/numerics/: 1e5.py  full_run.py
inputs/pta/: ipta_dr2.py  nanograv_15.py
inputs/pta/pta_data/: .gitkeep
installation/: index.html
material/.overrides/: home.html  main.html
material/.overrides/assets/javascripts/: custom.805f8adb.min.js
material/.overrides/partials/: parallax.html
material/.overrides/partials/parallax/: connect.html  expect.html  hero.html  spotlight.html
outputs/: index.html
overview/: index.html
reference/SUMMARY/: index.html
reference/ptarcade/__init__/: index.html
reference/ptarcade/chains_utils/: index.html
reference/ptarcade/data/__init__/: index.html
reference/ptarcade/data/default_config/: index.html
reference/ptarcade/data/full_run/: index.html
reference/ptarcade/ent_mod/: index.html
reference/ptarcade/fast_interpolate/: index.html
reference/ptarcade/input_handler/: index.html
reference/ptarcade/models_utils/: index.html
reference/ptarcade/models_utils (gluon's conflicted copy 2024-04-05)/: index.html
reference/ptarcade/plot_utils/: index.html
reference/ptarcade/plotting_utils/: index.html
reference/ptarcade/pta_importer/: index.html
reference/ptarcade/sampler/: index.html
reference/ptarcade/signal_builder/: index.html
search/: search_index.json
src/: chains_utils.py  fast_interpolate.py  input_hander.py  input_handler.py  models_aux.py  models_utils.py  pta_importer.py  signal_builder.py  signals.py  style.mplstyle
src/ptarcade/: __init__.py  chains_utils.py  ent_mod.py  fast_interpolate.py  input_handler.py  models_utils.py  plot_utils.py  plotting_utils.py  pta_importer.py  sampler.py  signal_builder.py
src/ptarcade/data/: default_config.py  sensitivity_curves_NG15yr_fullPTA.txt
src/ptarcade/data/30f_fs{cp}_ceffyl/: bandwidths.npy  density.npy  log10rhogrid.npy  log10rholabels.txt
src/ptarcade/data/30f_fs{hd}_ceffyl/: bandwidths.npy  density.npy  freqs.npy  log10rhogrid.npy  log10rholabels.txt  pulsar_list.txt
usage/: index.html
utils/: index.html
utils/chain_utils/: index.html
utils/model_utils/: index.html
utils/plot_utils/: index.html
