[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["Q000", "ANN", "E402"]
line-length = 120
target-version = "py310"
fix = true
unfixable = []
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # mccabe (complexity)
  "C90",
  # naming
  "N",
  # docstyles
  "D",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # blind except
  "BLE",
  # boolean traps
  "FBT",
  # flake8-bugbear
  "B",
  # catch overshadowing builtins
  "A",
  # comma errors
  "COM",
  # list comprehension help
  "C4",
  # help with datetime
  "DTZ",
  # error messages
  "EM",
  # shebangs
  "EXE",
  # imports
  "ICN",
  # logging
  "G",
  # namespacing help for packages
  "INP",
  # pytest
  "PT",
  # raise correctly
  "RSE",
  # returns
  "RET",
  # simplify code
  "SIM",
  # unused arguments
  "ARG",
  # use pathlib
  "PTH",
  # catch commented out code
  "ERA",
  # pandas help
  "PD",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PLC", "PLE", "PLR", "PLW",
  # try except
  "TRY",
  # convert to f strings
  "FLY",
  # numpy things
  "NPY",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # type-checking imports
  #"TCH",
  # pygrep-hooks
  #"PGH"
]

exclude = [
  "doc/sphinxext/*.py",
  "doc/build/*.py",
  "doc/temp/*.py",
  ".eggs/*.py",
]

[tool.poetry]
name = "PTArcade"
version = "1.1.1"
description = "PTArcade provides an interface to the ENTERPRISE analysis suite and allows for simple implementation of new-physics searches in PTA data."
readme = "README.md"
authors = ["Andrea Mitridate <andrea.mitridate@nanograv.org>",]
keywords = ["ptarcade"]
repository = "https://github.com/andrea-mitridate/PTArcade"
documentation = "https://andrea-mitridate.github.io/PTArcade/"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/andrea-mitridate/PTArcade/issues"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
ptmcmcsampler = "^2.1.1"
mpi4py = "^3.1.4"
h5py = "^3.8.0"
enterprise-pulsar = "^3.3.3"
enterprise-extensions = "^2.4.2"
scikit-sparse = "^0.4.12"
natpy = "^0.1.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
pyarrow = "^12.0.0"
getdist = "^1.4.6"
astroml = "^1.0.2.post1"
scipy = "^1.10.1"
setuptools = "^67.8.0"
encor = "^1.1.2"
llvmlite = "^0.40.0"
ceffyl = "~1.26"
numba = "^0.57.0"
tables = "^3.8.0"
rich = {extras = ["jupyter"], version = "^13.4.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.270"
black = "^23.3.0"
ipython = "^8.14.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = {git = "git@github.com:andrea-mitridate/mkdocs-material.git", rev="master"}
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"

[tool.poetry.scripts]
ptarcade = "ptarcade.sampler:main"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
