[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[project]
authors = [
    {name = "Andrea Mitridate", email = "andrea.mitridate@nanograv.org"},
    {name = "David Wright", email = "david.wright@nanograv.org"},
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "ptmcmcsampler>=2.1.1,<3.0.0",
    "mpi4py>=3.1.4,<5.0.0",
    "h5py>=3.8.0,<4.0.0",
    "enterprise-pulsar>=3.4.3,<4.0.0",
    "enterprise-extensions>=3.0.0,<4.0.0",
    "natpy>=0.1.1,<1.0.0",
    "numpy>=1.24.3,<3.0.0",
    "pandas>=2.0.2,<3.0.0",
    "pyarrow>=12.0.0",
    "getdist>=1.4.6,<2.0.0",
    "astroml>=1.0.2.post1,<2.0.0",
    "scipy>=1.10.1,<2.0.0",
    "encor>=1.1.5,<2.0.0",
    "rich[jupyter]>=13.4.2,<15.0.0",
    "ceffyl>=1.41.1,<1.50",
    "setuptools>=80.0.0",
    "astropy>=5.3.4",
]
name = "PTArcade"
version = "1.1.5"
description = "PTArcade provides an interface to the ENTERPRISE analysis suite and allows for simple implementation of new-physics searches in PTA data."
readme = "README.md"
keywords = [
    "ptarcade",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Bug Tracker" = "https://github.com/andrea-mitridate/PTArcade/issues"
repository = "https://github.com/andrea-mitridate/PTArcade"
documentation = "https://andrea-mitridate.github.io/PTArcade/"

[project.scripts]
ptarcade = "ptarcade.sampler:main"

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "ruff>=0.0.270,<1.0.0",
    "black>=23.3.0,<24.0.0",
    "ipython>=8.14.0,<9.0.0",
]
docs = [
    "mkdocs-material>=9.6.0,<10.0.0",
    "mkdocstrings[python]>=0.22.0,<1.0.0",
    "mkdocs-gen-files>=0.5.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.0,<1.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.6",
    "mkdocs-git-committers-plugin-2>=2.5.0",
]
[tool.ruff]
ignore = ["Q000", "ANN", "E402"]
line-length = 120
target-version = "py310"
fix = true
unfixable = []
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # mccabe (complexity)
  "C90",
  # naming
  "N",
  # docstyles
  "D",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # blind except
  "BLE",
  # boolean traps
  "FBT",
  # flake8-bugbear
  "B",
  # catch overshadowing builtins
  "A",
  # comma errors
  "COM",
  # list comprehension help
  "C4",
  # help with datetime
  "DTZ",
  # error messages
  "EM",
  # shebangs
  "EXE",
  # imports
  "ICN",
  # logging
  "G",
  # namespacing help for packages
  "INP",
  # pytest
  "PT",
  # raise correctly
  "RSE",
  # returns
  "RET",
  # simplify code
  "SIM",
  # unused arguments
  "ARG",
  # use pathlib
  "PTH",
  # catch commented out code
  "ERA",
  # pandas help
  "PD",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PLC", "PLE", "PLR", "PLW",
  # try except
  "TRY",
  # convert to f strings
  "FLY",
  # numpy things
  "NPY",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # type-checking imports
  #"TCH",
  # pygrep-hooks
  #"PGH"
]

exclude = [
  "doc/sphinxext/*.py",
  "doc/build/*.py",
  "doc/temp/*.py",
  ".eggs/*.py",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
